--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
+    "imagemin": "^5.2.2",
+    "imagemin-jpegtran": "^5.0.2",
     "mongoose": "^4.6.1",
     "multer": "^1.2.0",
     "pug": "^2.0.0-beta6"
