--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.14.0",
     "imagemin": "^5.2.2",
     "imagemin-jpegtran": "^5.0.2",
+    "lwip": "git+ssh://git@github.com/allfix53/lwip.git",
     "mongoose": "^4.6.1",
     "multer": "^1.2.0",
     "pug": "^2.0.0-beta6"
